# Alqurar

./: .gitignore  .graphifyignore  CLAUDE.md  Makefile  README.md  dev.sh  setup.sh
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_farmer_survey_elements.py  003_survey_new_fields.py  004_farm_element_new_fields.py  005_delay_events.py  006_project_queries.py  007_admissibility_assessments.py
apps/backend/app/: config.py  db.py  main.py  models.py
apps/backend/app/api/: __init__.py
apps/backend/app/core/: security.py
apps/backend/app/schemas/: admissibility.py  assignment.py  auth.py  clause.py  client_profile.py  contract_book.py  costing.py  delay_event.py  document.py  employee.py  permission.py  project.py  project_clause.py  project_query.py  role.py  user.py
apps/backend/app/services/: admissibility_service.py  ai_service.py  assignment_service.py  auth_service.py  book_clause_extraction.py  chronology_generation.py  clause_extraction.py  clause_service.py  client_profile_service.py  client_proposal_service.py  contract_book_service.py  costing_service.py  delay_event_extraction.py  delay_event_service.py  document_analysis.py  document_extract.py  document_service.py  drive_service.py  email_service.py  employee_service.py  eot_claim_service.py  pcc_comparison.py  permission_service.py  portal_auth_service.py  project_clause_service.py  project_query_service.py  project_service.py  role_service.py  user_service.py
(+180 files in other folders)
