[project]
name = "trust-os-backend"
version = "1.0.0"
description = "Trust OS Backend — FastAPI + SQLAlchemy + PostgreSQL"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "pyotp==2.9.0",
    "redis==5.2.0",
    "structlog==24.4.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.19",
    "email-validator==2.3.0",
    "pillow==12.2.0",
    "qrcode==8.0",
    "boto3==1.35.85",
    "httpx==0.28.1",
    "watchfiles==1.1.1",
    "greenlet==3.5.0",
    "anthropic>=0.69.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
]

[tool.uv]
dev-dependencies = []
